--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -481,14 +481,14 @@ depends_on = [
   "trait-multisig-vote"  
 ]
 
-[contracts.fwp-wstx-usda-50-50]
-path = "contracts_modules/alex_v1/pool-token/fwp-wstx-usda-50-50.clar"
+[contracts.fwp-wstx-usda-50-50-v1-01]
+path = "contracts_modules/alex_v1/pool-token/fwp-wstx-usda-50-50-v1-01.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.multisig-fwp-wstx-usda-50-50]
-path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-usda-50-50.clar"
+[contracts.multisig-fwp-wstx-usda-50-50-v1-01]
+path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-usda-50-50-v1-01.clar"
 depends_on = [
-  "fwp-wstx-usda-50-50",
+  "fwp-wstx-usda-50-50-v1-01",
   "fixed-weight-pool-v1-01",
   "trait-multisig-vote"  
 ]
@@ -578,7 +578,7 @@ depends_on = [
 [contracts.multisig-fwp-wstx-usda]
 path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-usda.clar"
 depends_on = [
-  "fwp-wstx-usda-50-50",
+  "fwp-wstx-usda-50-50-v1-01",
   "simple-weight-pool",
   "trait-multisig-vote"
 ]
@@ -607,10 +607,6 @@ depends_on = [ "trait-ownable", "trait-sip-010", "trait-transfer", "alex-reserve
 [contracts.trait-transfer]
 path = "contracts_modules/alex_v1/traits/trait-transfer.clar"
 depends_on = [ ]
-
-[contracts.dual-token-transfer]
-path = "contracts_modules/alex_v1/tests/dual-token-transfer.clar"
-depends_on = [ "trait-transfer", "token-diko" ]
 
 [contracts.token-diko]
 path = "contracts_modules/alex_v1/token/token-diko.clar"
@@ -651,6 +647,18 @@ depends_on = [ "age003-emergency-execute", "age004-claim-and-stake" ]
 [contracts.age004-claim-and-stake]
 path = "alex-dao-proposals/contracts/age004-claim-and-stake.clar"
 depends_on = [ "executor-dao", "extension-trait", "alex-reserve-pool", "fwp-wstx-alex-50-50-v1-01", "fwp-wstx-wbtc-50-50-v1-01", "age000-governance-token", "fwp-alex-wban" ]
+
+[contracts.agp040]
+path = "alex-dao-proposals/contracts/agp040.clar"
+depends_on = [ "alex-vault" ]
+
+[contracts.dual-farm-diko-helper]
+path = "contracts_modules/alex_v1/helpers/dual-farm-diko-helper.clar"
+depends_on = [ "dual-farming-pool", "token-wdiko" ]
+
+[contracts.agp042]
+path = "alex-dao-proposals/contracts/agp042.clar"
+depends_on = [ "alex-reserve-pool", "simple-weight-pool-alex", "fwp-alex-usda", "multisig-fwp-alex-usda", "token-wusda", "dual-farming-pool", "dual-farm-diko-helper" ]
 
 
 
