--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -660,6 +660,14 @@ depends_on = [ "dual-farming-pool", "token-wdiko" ]
 path = "alex-dao-proposals/contracts/agp042.clar"
 depends_on = [ "alex-reserve-pool", "simple-weight-pool-alex", "fwp-alex-usda", "multisig-fwp-alex-usda", "token-wusda", "dual-farming-pool", "dual-farm-diko-helper" ]
 
+[contracts.age005-claim-and-stake]
+path = "alex-dao-proposals/contracts/age005-claim-and-stake.clar"
+depends_on = [ "executor-dao", "extension-trait", "alex-reserve-pool", "fwp-wstx-alex-50-50-v1-01", "fwp-wstx-wbtc-50-50-v1-01", "age000-governance-token", "fwp-alex-wban", "dual-farming-pool", "fwp-alex-usda", "dual-farm-diko-helper" ]
+
+[contracts.agp043]
+path = "alex-dao-proposals/contracts/agp043.clar"
+depends_on = [ "age003-emergency-execute", "age005-claim-and-stake" ]
+
 
 
 
