--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -752,6 +752,18 @@ depends_on = [ "alex-vault", "age000-governance-token", "auto-fwp-wstx-alex-120"
 path = "alex-dao-proposals/contracts/agp054.clar"
 depends_on = [ "alex-vault", "age000-governance-token", "auto-fwp-wstx-alex-120", "auto-fwp-wstx-alex-120x" ]
 
+[contracts.age056]
+path = "alex-dao-proposals/contracts/agp056.clar"
+depends_on = [ "age000-governance-token", "alex-reserve-pool", "fwp-wstx-alex-50-50-v1-01", "fwp-wstx-wbtc-50-50-v1-01" ]
+
+[contracts.age007-claim-and-send-stake]
+path = "alex-dao-proposals/contracts/age007-claim-and-send-stake.clar"
+depends_on = [ "executor-dao", "extension-trait", "alex-reserve-pool", "fwp-wstx-alex-50-50-v1-01", "fwp-wstx-wbtc-50-50-v1-01", "age000-governance-token", "fwp-alex-wban", "dual-farming-pool", "fwp-alex-usda", "dual-farm-diko-helper", "fwp-wstx-wxusd-50-50-v1-01" ]
+
+[contracts.agp057]
+path = "alex-dao-proposals/contracts/agp057.clar"
+depends_on = [ "age004-claim-and-stake", "age005-claim-and-stake", "age007-claim-and-send-stake" ]
+
 
 
 
