--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -796,6 +796,52 @@ depends_on = [ "trait-semi-fungible-v1-01" ]
 path = "alex-dao-proposals/contracts/agp062.clar"
 depends_on = [ "auto-fwp-alex-autoalex-x-v1-01" ]
 
+[contracts.agp061]
+path = "alex-dao-proposals/contracts/agp061.clar"
+depends_on = [ "multisig-fwp-wstx-wmia-50-50-v1-01", "multisig-fwp-wstx-wnycc-50-50-v1-01" ]
+
+[contracts.fwp-wstx-wmia-50-50-v1-01]
+path = "contracts_modules/alex_v1/pool-token/fwp-wstx-wmia-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-wmia-50-50-v1-01]
+path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-wmia-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-wmia-50-50-v1-01",
+  "fixed-weight-pool-v1-01",
+  "trait-multisig-vote",
+  "token-wstx",
+  "token-wmia"
+]
+[contracts.token-wmia]
+path = "contracts_modules/alex_v1/wrapped-token/token-wmia.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-mia"]
+
+[contracts.token-mia]
+path = "contracts_modules/alex_v1/token/token-mia.clar"
+depends_on = [ "trait-ownable", "trait-sip-010"]
+
+[contracts.fwp-wstx-wnycc-50-50-v1-01]
+path = "contracts_modules/alex_v1/pool-token/fwp-wstx-wnycc-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-wnycc-50-50-v1-01]
+path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-wnycc-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-wnycc-50-50-v1-01",
+  "fixed-weight-pool-v1-01",
+  "trait-multisig-vote",
+  "token-wstx",
+  "token-wnycc"
+]
+[contracts.token-wnycc]
+path = "contracts_modules/alex_v1/wrapped-token/token-wnycc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-nycc"]
+
+[contracts.token-nycc]
+path = "contracts_modules/alex_v1/token/token-nycc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010"]
+
 
 
 
