--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -842,6 +842,14 @@ depends_on = [ "trait-ownable", "trait-sip-010", "token-nycc"]
 path = "contracts_modules/alex_v1/token/token-nycc.clar"
 depends_on = [ "trait-ownable", "trait-sip-010"]
 
+[contracts.age008-claim-and-send-stake]
+path = "alex-dao-proposals/contracts/age008-claim-and-send-stake.clar"
+depends_on = [ "executor-dao", "extension-trait", "alex-reserve-pool", "fwp-wstx-alex-50-50-v1-01", "fwp-wstx-wbtc-50-50-v1-01", "age000-governance-token", "fwp-alex-wban", "dual-farming-pool", "fwp-alex-usda", "dual-farm-diko-helper", "fwp-wstx-wxusd-50-50-v1-01" ]
+
+[contracts.agp063]
+path = "alex-dao-proposals/contracts/agp063.clar"
+depends_on = [ "age007-claim-and-send-stake", "age008-claim-and-send-stake" ]
+
 
 
 
