--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -858,6 +858,10 @@ depends_on = [ "fwp-wstx-alex-tranched-64" ]
 path = "contracts_modules/alex_v1/pool/fwp-wstx-alex-tranched-64.clar"
 depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "alex-reserve-pool", "fixed-weight-pool-v1-01", "token-wstx", "age000-governance-token" ]
 
+[contracts.agp065]
+path = "alex-dao-proposals/contracts/agp065.clar"
+depends_on = [ "age000-governance-token" ]
+
 
 
 
