--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1056,6 +1056,10 @@ depends_on = [ "auto-fwp-alex-autoalex-x-v1-01" ]
 path = "alex-dao-proposals/contracts/agp072.clar"
 depends_on = [ "auto-fwp-alex-autoalex-x-v1-01" ]
 
+[contracts.agp073]
+path = "alex-dao-proposals/contracts/agp073.clar"
+depends_on = [ "age000-governance-token", "collateral-rebalancing-pool-v1", "yield-token-pool", "yield-alex", "ytp-alex", "key-alex-autoalex", "yield-alex-v1", "ytp-alex-v1", "key-alex-autoalex-v1", "auto-yield-alex", "auto-ytp-alex", "auto-key-alex-autoalex", "multisig-crp-alex-autoalex-v1", "multisig-ytp-alex", "alex-vault", "alex-reserve-pool" ]
+
 
 
 
