--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1072,9 +1072,17 @@ depends_on = [ "alex-lottery", "age000-governance-token", "token-apower" ]
 path = "alex-dao-proposals/contracts/agp077.clar"
 depends_on = [ "age000-governance-token" ]
 
-[contracts.agp081]
-path = "alex-dao-proposals/contracts/agp081.clar"
-depends_on = [ "fwp-wstx-wmia-50-50-v1-01", "fwp-wstx-wnycc-50-50-v1-01" ]
+[contracts.agp082]
+path = "alex-dao-proposals/contracts/agp082.clar"
+depends_on = [ "token-wmia", "token-wnycc", "token-wslm", "token-wdiko", "auto-alex" ]
+
+[contracts.agp083]
+path = "alex-dao-proposals/contracts/agp083.clar"
+depends_on = [ "token-wmia", "token-wnycc", "token-wslm", "token-wdiko", "auto-alex" ]
+
+[contracts.agp084]
+path = "alex-dao-proposals/contracts/agp084.clar"
+depends_on = [ "token-wmia", "token-wnycc", "token-wslm", "token-wdiko", "auto-alex" ]
 
 
 
