--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1112,7 +1112,13 @@ depends_on = [ "proposal-trait", "executor-dao", "age000-governance-token", "age
 path = "alex-dao-proposals/contracts/agp094.clar"
 depends_on = [ "proposal-trait", "executor-dao", "age000-governance-token", "age009-token-lock" ]
 
+[contracts.age010-claim-and-send-stake]
+path = "alex-dao-proposals/contracts/age010-claim-and-send-stake.clar"
+depends_on = [ "executor-dao", "extension-trait", "alex-reserve-pool", "fwp-wstx-alex-50-50-v1-01", "fwp-wstx-wbtc-50-50-v1-01", "age000-governance-token", "fwp-alex-wban", "dual-farming-pool", "fwp-alex-usda", "dual-farm-diko-helper", "fwp-wstx-wxusd-50-50-v1-01" ]
 
+[contracts.agp095]
+path = "alex-dao-proposals/contracts/agp095.clar"
+depends_on = [ "age010-claim-and-send-stake", "age008-claim-and-send-stake" ]
 
 
 
